Make the "forum" portlet list more than one forum